# open_xml

./: .bazelignore  .gitignore  .gitmodules  BUILD.bazel  CHANGELOG.md  Dockerfile  MODULE.bazel  README.md  VERIFY.md  docker-compose.yml  pubspec.yaml  scratch.dart  update_clean.dart
.gitea/workflows/: deploy.yml  renovate.yml
.github/: dependabot.yaml
.github/workflows/: deploy.yml
cli/: README.md  pubspec.yaml
cli/lib/: tui_app.dart
cli/test/: ascii_renderer_test.dart  tui_test.dart
doc_site/: README.md  pubspec.yaml
doc_site/content/: core.md  docx.md  index.md  pptx.md  xlsx.md
doc_site/lib/: main.client.options.dart  main.server.dart  main.server.options.dart
doc_site/test/: live_examples_export_test.dart  static_pages_test.dart
docs/: open_xml_core.md  open_xml_pptx.md  open_xml_xlsx.md
example/: pubspec.yaml
examples/: clean.sh  pubspec.yaml  run_all.sh  run_examples.sh  validate_all.sh
examples/docx/: docx_comments_example.dart  (+7 more)
lib/: open_xml.dart
templates/: basic.docx  basic.pptx  basic.xlsx
test/: aspect_ratio_test.dart  builder_test.dart  exporter_test.dart  high_level_presentation_test.dart  high_level_spreadsheet_test.dart  high_level_word_test.dart  images_golden_test.dart  keynote_golden_test.dart  keynote_parity_test.dart  media_utils_test.dart  pptx_regression_test.dart  remote_media_test.dart  slide_test.dart  transition_test.dart  verification_test.dart
tool/: debug_pptx.dart  diff_pptx.dart  generate_example_tests.dart  generate_skills.dart  port_examples.dart  pptx_type_generator.dart  test_log.dart
(+165 files in other folders)
