module(
    name = "open_xml",
    version = "1.0.0",
)

bazel_dep(name = "rules_flutter", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.42.0")

git_override(
    module_name = "rules_flutter",
    remote = "https://github.com/SpencerC/rules_flutter.git",
    commit = "ca70cb77c09d4522fea090c42d81beed597bdacf",
)

flutter = use_extension("@rules_flutter//flutter:extensions.bzl", "flutter")
flutter.toolchain(flutter_version = "3.24.0")
use_repo(
    flutter,
    "flutter_sdk",
    "flutter_toolchains",
)

register_toolchains("@flutter_toolchains//:all")
